--- a/plugin.xml
+++ b/plugin.xml
@@ -25,7 +25,7 @@
       <uses-feature android:name="android.hardware.camera.front" android:required="false" />
     </config-file>
     <source-file src="src/android/QRScanner.java" target-dir="src/com/bitpay/cordova/qrscanner"/>
-    <dependency id="cordova-plugin-compat" version="^1.0.0" />
+    <dependency id="cordova-plugin-compat" version="^1.2.0" />
     <framework src="src/android/qrscanner.gradle" custom="true" type="gradleReference"/>
   </platform>
 
@@ -35,7 +35,7 @@
         <param name="ios-package" value="QRScanner"/>
       </feature>
     </config-file>
-    <dependency id="cordova-plugin-swift-support" spec="~3.1.1" />
+    <dependency id="cordova-plugin-add-swift-support" version="~1.7.2"/>
     <source-file src="src/ios/QRScanner.swift"/>
     <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
       <string>The camera is used to scan QR codes.</string>
